Updated docs to 365fcfc

--- a/lab_05.html
+++ b/lab_05.html
@@ -172,6 +172,18 @@ together your conditions using <code>AND</code> and <code>OR</code></p>
 <ul>
 	<li>Select from the teachers and departments table but call the <code>id</code> of teachers <code>teacher_id</code> and the <code>id</code> of departments, <code>dept_id</code></li>
 </ul>
+<h2>Coding Exercises</h2>
+<ul>
+	<li>Create a file called <code>twitter.db</code> in your repository. This is your database.</li>
+	<li>In your server code add <code>import sqlite3</code></li>
+	<li>Connect to your database by following the instructions in the documentation <br />
+<a href="https://docs.python.org/2/library/sqlite3.html">here</a></li>
+	<li>Draw your table schemas for your database. Think about what you need to store. What should the table name be? What columns should it have?</li>
+	<li>Look at how they create tables in <a href="https://docs.python.org/2/library/sqlite3.html">here</a>. Create your table in your server code</li>
+	<li>Create a new route called <code>twitter_clone</code> as in number 3.</li>
+	<li>Learn how to insert into a table in <a href="https://docs.python.org/2/library/sqlite3.html">here</a>. Add this to your route&#8217;s function.</li>
+	<li>Create your html file associated with the <code>twitter_clone</code> route</li>
+</ul>
 <h2>Install and setup a Local <span class="caps">MYSQL</span> server</h2>
 <p>You will be using <span class="caps">MYSQL</span> as an <span class="caps">RDBMS</span>.</p>
 <ul>
