Updated docs to 2adb674

--- a/lab_05.html
+++ b/lab_05.html
@@ -174,7 +174,8 @@ together your conditions using <code>AND</code> and <code>OR</code></p>
 </ul>
 <h2>Coding Exercises</h2>
 <ul>
-	<li>Create a file called <code>twitter.db</code> in your repository. This is your database.</li>
+	<li>Create a file called <code>twitter.db</code> in your twitter analyzer repository. This is your database. <br />
+<code>touch twitter.db</code></li>
 	<li>In your server code add <code>import sqlite3</code></li>
 	<li>Connect to your database by following the instructions in the documentation <br />
 <a href="https://docs.python.org/2/library/sqlite3.html">here</a></li>
