Updated docs to 1d2e623

--- a/lab_05.html
+++ b/lab_05.html
@@ -185,8 +185,9 @@ together your conditions using <code>AND</code> and <code>OR</code></p>
 <code>IF NOT EXISTS</code> on your <code>CREATE TABLE</code> statement. It should look something like<br />
 <code>CREATE TABLE IF NOT EXISTS some_table (id INTEGER PRIMARY KEY AUTOINCREMENT, ...);</code></li>
 	<li>Create a new route called <code>twitter_clone</code> as in number 3.</li>
-	<li>Learn how to insert into a table in <a href="https://docs.python.org/2/library/sqlite3.html">here</a>. Add this to your route&#8217;s function.</li>
+	<li>Learn how to insert into a table in <a href="https://docs.python.org/2/library/sqlite3.html">here</a>. Add this to your route&#8217;s function for a <span class="caps">POST</span>. For your get, use a <code>SELECT</code> statement</li>
 	<li>Create your html file associated with the <code>twitter_clone</code> route</li>
+	<li></li>
 </ul>
 <h2>Install and setup a Local <span class="caps">MYSQL</span> server</h2>
 <p>You will be using <span class="caps">MYSQL</span> as an <span class="caps">RDBMS</span>.</p>
