Updated docs to 9729bed

--- a/lab_05.html
+++ b/lab_05.html
@@ -180,6 +180,8 @@ together your conditions using <code>AND</code> and <code>OR</code></p>
 	<li>Connect to your database by following the instructions in the documentation <br />
 <a href="https://docs.python.org/2/library/sqlite3.html">here</a></li>
 	<li>Draw your table schemas for your database. Think about what you need to store. What should the table name be? What columns should it have?</li>
+	<li>Make sure you have an <code>id</code> column. Make it the <code>PRIMARY KEY</code> and <code>AUTOINCREMENT</code> it. Autoincrement will mean that every time you insert a new row, it will automatically give it an ID that is incremented from the last insertion. This means<br />
+that during an insertion to the database, you don&#8217;t have to explicitly add the id value. SQLITE3 will do it for you and give it an id value</li>
 	<li>Look at how they create tables in <a href="https://docs.python.org/2/library/sqlite3.html">here</a>. Create your table in your server code</li>
 	<li>Now, every time you restart your server, you&#8217;ll be recreating the table. Add <br />
 <code>IF NOT EXISTS</code> on your <code>CREATE TABLE</code> statement. It should look something like<br />
@@ -187,7 +189,6 @@ together your conditions using <code>AND</code> and <code>OR</code></p>
 	<li>Create a new route called <code>twitter_clone</code> as in number 3.</li>
 	<li>Learn how to insert into a table in <a href="https://docs.python.org/2/library/sqlite3.html">here</a>. Add this to your route&#8217;s function for a <span class="caps">POST</span>. For your get, use a <code>SELECT</code> statement</li>
 	<li>Create your html file associated with the <code>twitter_clone</code> route</li>
-	<li></li>
 </ul>
 <h2>Install and setup a Local <span class="caps">MYSQL</span> server</h2>
 <p>You will be using <span class="caps">MYSQL</span> as an <span class="caps">RDBMS</span>.</p>
