Updated docs to e259266

--- a/lab_05.html
+++ b/lab_05.html
@@ -198,8 +198,8 @@ that during an insertion to the database, you don&#8217;t have to explicitly add
 	<li>Create a new route called login and a new route called register.</li>
 	<li>Create forms in each html page for login and registration</li>
 	<li>On your login page, you can expect a user to submit their username and password. Search for the User in the database with that particular userid and password combination and redirect them to all their tweets.</li>
-	<li>Learn about requiring authentication for certain pages. <a href="http://flask.pocoo.org/snippets/8/"></a> This will restrict access to the tweets page without logging in.</li>
-	<li>This is similar to authentication in the real world, but is definitely not productionizable. For one, we would want to encrypt all the passwords and decrypt them. Here&#8217;s how to store passwords in a database with <code>bcrypt</code> <a href="https://stackoverflow.com/questions/9559549/how-to-compare-plain-text-password-to-hashed-password-using-bcrypt"></a></li>
+	<li>Learn about requiring authentication for certain pages. <a href="http://flask.pocoo.org/snippets/8/">See here for auth instructions</a> This will restrict access to the tweets page without logging in.</li>
+	<li>This is similar to authentication in the real world, but is definitely not productionizable. For one, we would want to encrypt all the passwords and decrypt them. Here&#8217;s how to store passwords in a database with  <a href="https://stackoverflow.com/questions/9559549/how-to-compare-plain-text-password-to-hashed-password-using-bcrypt"><code>bcrypt</code></a></li>
 </ul>
 <h2>Install and setup a Local <span class="caps">MYSQL</span> server</h2>
 <p>You will be using <span class="caps">MYSQL</span> as an <span class="caps">RDBMS</span>.</p>
