Updated docs to 2f39b54

--- a/lab_05.html
+++ b/lab_05.html
@@ -41,6 +41,7 @@
   <li id="lab_3_link"><a href="lab_03.html">Homework Assignment 04</a></li>
   <li id="lab_4_link"><a href="lab_04.html">REST</a></li>
   <li id="lab_5_link"><a href="lab_05.html">SQL</a></li>
+  <li id="lab_6_link"><a href="lab_06.html">Client Side Programming</a></li>
 
           </ol>
         </nav>
@@ -198,7 +199,7 @@ that during an insertion to the database, you don&#8217;t have to explicitly add
 	<li>Create a new route called login and a new route called register.</li>
 	<li>Create forms in each html page for login and registration</li>
 	<li>On your login page, you can expect a user to submit their username and password. Search for the User in the database with that particular userid and password combination and redirect them to all their tweets.</li>
-	<li>Learn about requiring authentication for certain pages. We will <a href="https://www.tutorialspoint.com/flask/flask_cookies.htm">use cookies</a> to keep track of users and check if they are logged in. If they are logged in, they will have a cookie set, if they log out then &lt;a href =&#8220;https://stackoverflow.com/questions/14386304/flask-how-to-remove-cookies&#8221;&gt; &#8220;delete&#8221; their cookie</a> <a href="http://flask.pocoo.org/snippets/8/">See here for auth instructions</a> This will restrict access to the tweets page without logging in.</li>
+	<li>Learn about requiring authentication for certain pages. We will <a href="https://www.tutorialspoint.com/flask/flask_cookies.htm">use cookies</a> to keep track of users and check if they are logged in. If they are logged in, they will have a cookie set, if they log out then &lt;a href =&#8220;https://stackoverflow.com/questions/14386304/flask-how-to-remove-cookies&#8221;&gt; &#8220;delete&#8221;</a> their cookie <a href="http://flask.pocoo.org/snippets/8/">See here for auth instructions</a> This will restrict access to the tweets page without logging in.</li>
 	<li>This is similar to authentication in the real world, but is definitely not productionizable. For one, we would want to encrypt all the passwords and decrypt them. Here&#8217;s how to store passwords in a database with  <a href="https://stackoverflow.com/questions/9559549/how-to-compare-plain-text-password-to-hashed-password-using-bcrypt"><code>bcrypt</code></a></li>
 </ul>
 <h2>Install and setup a Local <span class="caps">MYSQL</span> server</h2>
@@ -228,8 +229,10 @@ that during an insertion to the database, you don&#8217;t have to explicitly add
       Previous
     </a>
   
-  
-    <span></span
+      <a href="lab_06.html">
+      <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
+      Next
+    </a>
   </nav>
 
       </div>
