--- a/lab_04.html
+++ b/lab_04.html
@@ -41,6 +41,7 @@
   <li id="lab_3_link"><a href="lab_03.html">Homework Assignment 04</a></li>
   <li id="lab_4_link"><a href="lab_04.html">REST</a></li>
   <li id="lab_5_link"><a href="lab_05.html">SQL</a></li>
+  <li id="lab_6_link"><a href="lab_06.html">Client Side Programming</a></li>
 
           </ol>
         </nav>
