--- a/lab_01.html
+++ b/lab_01.html
@@ -42,6 +42,7 @@
   <li id="lab_4_link"><a href="lab_04.html">REST</a></li>
   <li id="lab_5_link"><a href="lab_05.html">SQL</a></li>
   <li id="lab_6_link"><a href="lab_06.html">Client Side Programming</a></li>
+  <li id="lab_7_link"><a href="lab_07.html">Node</a></li>
 
           </ol>
         </nav>
