--- a/lab_07.html
+++ b/lab_07.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lab 7 - Python 102</title>
+    <title>Lab 7 - Software Development</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
-    <meta name="description" content="A guided tour that walks through file i/o, if statements, and for loops">
+    <meta name="description" content="A guided tour thatintroduces students to building web applications">
     <meta name="theme-color" content="#0000ff">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" media="screen" href="reset.css">
@@ -31,142 +31,121 @@
     <div class="layout">
       <div id="index">
         <p class="link-home">
-          <a href="index.html"><span>Python 102</span></a>
+          <a href="index.html"><span>Software Development</span></a>
         </p>
         <button class="link-menu">Menu</button>
         <nav tabindex="0">
           <ol>
-              <li id="lab_1_link"><a href="lab_01.html">If statement</a></li>
-  <li id="lab_2_link"><a href="lab_02.html">Iterating</a></li>
-  <li id="lab_3_link"><a href="lab_03.html">File I/O</a></li>
-  <li id="lab_4_link"><a href="lab_04.html">Quiz 01</a></li>
-  <li id="lab_5_link"><a href="lab_05.html">Homework Assignment 01</a></li>
-  <li id="lab_6_link"><a href="lab_06.html">Functions</a></li>
-  <li id="lab_7_link"><a href="lab_07.html">Classes</a></li>
-  <li id="lab_8_link"><a href="lab_08.html">Quiz 01</a></li>
-  <li id="lab_9_link"><a href="lab_09.html">Homework Assignment 02</a></li>
-  <li id="lab_10_link"><a href="lab_10.html">Homework Assignment 03</a></li>
+              <li id="lab_1_link"><a href="lab_01.html">Client-Server Model</a></li>
+  <li id="lab_2_link"><a href="lab_02.html">API</a></li>
+  <li id="lab_3_link"><a href="lab_03.html">Homework Assignment 04</a></li>
+  <li id="lab_4_link"><a href="lab_04.html">REST</a></li>
+  <li id="lab_5_link"><a href="lab_05.html">SQL</a></li>
+  <li id="lab_6_link"><a href="lab_06.html">Client Side Programming</a></li>
+  <li id="lab_7_link"><a href="lab_07.html">Node</a></li>
 
           </ol>
         </nav>
       </div>
 
       <div id="content" tabindex="-1">
-        <h1 class="lab_title"><em>lab 7</em>  Classes</h1>
-<p>1. Creating a class creates a new type of object. It thus allows new instances of that class to be made.</p>
-<h2>Overview</h2>
-<h3 class="file-heading"><em>bank_account.py</em></h3>
-<pre class="file">class BankAccount:
-    def __init__(self, name, balance=0.00):
-        self.name = name
-        self.balance = balance
+        <h1 class="lab_title"><em>lab 7</em>  Node</h1>
+<h2>What is node?</h2>
+<p>Node is an open-source javascript runtime. It is typically used as a server! We&#8217;ve been using a lot of flask lately, but we&#8217;ll be moving over to node as it is often used in production systems</p>
+<h2>Install node</h2>
+<ul>
+	<li><code>brew update</code> to make sure you have the latest packages</li>
+	<li><code>brew install node</code> to install node</li>
+	<li><code>npm install -g n</code> to install node globally</li>
+	<li><code>n stable</code> to get the latest version of node</li>
+	<li><code>brew uninstall node</code> to uninstall the previous version of node</li>
+</ul>
+<h2>Dependencies</h2>
+<p>In python you would often import code from different libraries (like request, flask, etc.) after we <code>pip install</code> them. In node we use <code>npm</code> as a package manager and to install different packages we run <code>npm install &lt;package_name&gt;</code>. In order to not have to make others manually install all your packages, we will have one sript file called <code>package.json</code> to store everything you want to install</p>
+<h2>Creating a server file with node</h2>
+<p>1. Create a repo called chatapp-node<br />
+2. To make your package.json run <code>npm init</code> and answer all the questions. Inspect your <code>package.json</code> file<br />
+3. Now create a new file and call it <code>server.js</code><br />
+4. We will be using a framework called <a href="https://expressjs.com/">express</a>. Run <code>npm install --save express</code>. Adding <code>--save</code> will save it to the <code>package.json</code><br />
+5. Write basic server code<br />
+h3(file-heading). <em>server.js</em></p>
+<pre class="file">const express = require('express');
+const app = express();
+const port = 3000;
 
-    def deposit(self, amount):
-        """make a deposit"""
-        self.balance += amount
+app.get('/', (req, res) =&gt; res.send('Hello World!'));
 
-    def withdraw(self, amount):
-        """make a withdraw"""
-        if amount &gt; self.balance:
-            raise ValueError("insufficient funds")
-        self.balance -= amount
-
-    def get_balance(self): 
-        """check the balance"""
-        return self.balance
-
-
-customer1 = BankAccount('Alex')
-print(customer1.get_balance())
-customer1.deposit(100)
-customer1.withdraw(30)
-print(customer1.get_balance())
-
-customer2 = BankAccount('Sam', 200)
-print(customer2.get_balance())
+app.listen(port, () =&gt; console.log(`Example app listening on port ${port}!`));
 </pre>
-<h3><b>Execute:</b></h3>
-<pre class="instructions">python bank_account.py</pre>
-<h3><b>Output:</b></h3>
-<pre class="sample">
-<div class="sample_command">$ python bank_account.py</div>
-<p>0.0<br />
-70.0<br />
-200<br />
-</pre></p>
-<h2>Object inheritance</h2>
-<p><a href="https://en.wikipedia.org/wiki/Inheritance_(object-oriented_programming)">Object inheritence</a></p>
-<p>Classes can inherit from other classes. A class can inherit attributes and behaviour methods from another class, called the superclass. A class which inherits from a superclass is called a subclass, also called heir class or child class. Superclasses are sometimes called ancestors as well. There exists a hierarchy relationship between classes.</p>
-<p><img src="inheritance.png"></img></p>
-<h3 class="file-heading"><em>inheritance.py</em></h3>
-<pre class="file">class Animal:
-    def __init__(self, kind, place):
-        self.kind = kind
-        self.place = place
+<p>6. Now run it by typing <code>node server.js</code><br />
+7. Take a look at your home page and ensure that you can see <code>Hello World!</code> output at <code>localhost:3000</code><br />
+8. Now that we are not subscribing to the flask framework, our file structure will look different. Create a folder called <code>views</code>. <code>views</code> is where you will be storing all our html<br />
+9. Create a file called <code>index.html</code> within <code>views</code> and put any html code of your choosing<br />
+10. Now refactor your server code to render the html rather than just saying &#8216;Hello World&#8217;. See <a href="https://expressjs.com/en/4x/api.html#res.render">here</a><br />
+11. Confirm that it works!</p>
+<h2>Model View Controller</h2>
+<p>A common application architectural pattern is the Model-View-Controller (<span class="caps">MVC</span>) pattern.</p>
+<ul>
+	<li>Models &#8211; are responsible for storing, retrieving, and manipulating data. You will have a section whose entire role is to have code that will talk to the database</li>
+	<li>Views &#8211; contain the functionality of Controllers and are responsible for both displaying <span class="caps">HTML</span> and binding user events to the <span class="caps">DOM</span></li>
+	<li>Controllers &#8211; Handles any incoming <span class="caps">URL</span> request (the functions related to your endpoints/routes)</li>
+</ul>
+<h2>Refactor folder structure<br />
+1. Create a folder called <code>routes</code>. In our case we will have our routes contain our controller code. <br />
+2. Create a folder called <code>models</code><br />
+3. Create a folder called <code>public</code> this will be similar to our <code>static</code> folder in flask. This is where we will house any static files we want to display or use within our html (like javascripts, css, etc.)<br />
+4. Create a folder called <code>db</code> this will be where we store all our database files</h2>
+<h2>Refactor Server to show Routes<br />
+2. Create a file called <code>index.js</code> within routes<br />
+3. Refactor your server code <br />
+h3(file-heading). <em>server.py</em></h2>
+<pre class="file">var express = require('express');
+var path = require('path');
 
-    def speak(self, adverb):
-        print("%s just did a %s %s" % (self.name, adverb, self.speechtype))
+var port = 3000;
 
-    #getallinfo method, get's all the parametrs of both classes.
-    def getallinfo(self):
-        print("%s is a %s %s %s, sitting on the %s" % (self.name, self.gender, self.breed, self.kind, self.place))
+var routes = require('./routes/index');
 
-#This class inherits kind and place arguments from Animal class (which can work for any animal)
-#Initiates a Dog object with name, gender and breed parameters.
+var app = express();
 
-class Dog(Animal):
-    def __init__(self, name, gender, breed):
-        self.name = name
-        self.gender = gender
-        self.breed = breed
-        self.speechtype = "woof";
-        Animal.__init__(self, 'Dog', 'Ground')
+// view engine setup
+app.set('views', path.join(__dirname, 'views'));
+app.set('public', path.join(__dirname, 'public'));
+app.set('view engine', 'html');
 
+app.use(logger('dev'));
+app.use(bodyParser.json());
+app.use(bodyParser.urlencoded({ extended: false }));
+app.use(cookieParser());
+app.use(express.static(path.join(__dirname, '/public')));
+app.use('/', routes);
 
-#Cat class inherits the paramets of use for a Cat (similar things) like name, gender and breed, which they both share, also the getallinfo method and initiate them. 
-class Cat(Animal):
-    def __init__(self, name, gender, breed):
-        self.name = name
-        self.gender = gender
-        self.breed = breed
-        self.speechtype = "meow";
-        Animal.__init__(self, 'Cat', 'Ground')
+app.listen(port, function() {
+  console.log('Listening in on port' + port);
+});
 
-
-#Here I create 3 objects, 2 dogs and 1 cat with selected arguments.
-#And check for some methods on the objects.
-Mickey = Dog('Mickey', 'Male', 'Bulldog')
-Flora = Dog('Flora','Female','Pug')
-Tina = Cat('Tina','Female','Persian')
-Tina.getallinfo()
-Tina.speak('soft')
-Flora.getallinfo()
-Mickey.speak('loud')
+module.exports = app;
 </pre>
-<h3><b>Execute:</b></h3>
-<pre class="instructions">python bank_account.py</pre>
-<h3><b>Output:</b></h3>
-<pre class="sample">
-<div class="sample_command">$ python bank_account.py</div>
-<p>0.0<br />
-70.0<br />
-200<br />
-</pre></p>
-<h2>Coding exercises</h2>
-<p>1. Create a User class that has the following attributes: username, password, first name, last name, email, birthday</p>
-<p>2. Add the function get_full_name which returns the first name and last name</p>
-<p>3. Add the function change password which changes the previous password to the new password. You do not need to return anything.</p>
-<p>4. Add a new subclass to inheritance.py above with any animal of your choosing</p>
+<p>4. Now within your index.js file<br />
+h3(file-heading). <em>index.js</em></p>
+<pre class="file">const express = require('express');
+const router = express.Router();
+
+router.get('/', function(req, res, next) {
+  res.render('index');
+});
+
+module.exports = router;
+</pre>
+<p>5. Now pause and take a look at the two files. Think about why and how this works! Look at anything that has to do with the variable <code>routes</code> within your server file.</p>
         <nav class="foot-navigation">
       <a href="lab_06.html">
       <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
       Previous
     </a>
   
-      <a href="lab_08.html">
-      <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
-      Next
-    </a>
+  
+    <span></span
   </nav>
 
       </div>
