Updated docs to b488260

--- a/lab_07.html
+++ b/lab_07.html
@@ -95,10 +95,10 @@ app.listen(port, () =&gt; console.log(`Example app listening on port ${port}!`))
 2. Create a folder called <code>models</code><br />
 3. Create a folder called <code>public</code> this will be similar to our <code>static</code> folder in flask. This is where we will house any static files we want to display or use within our html (like javascripts, css, etc.)<br />
 4. Create a folder called <code>db</code> this will be where we store all our database files</h2>
-<h2>Refactor Server to show Routes<br />
-2. Create a file called <code>index.js</code> within routes<br />
-3. Refactor your server code <br />
-h3(file-heading). <em>server.py</em></h2>
+<h2>Refactor Server to show Routes</h2>
+<p>1. Create a file called <code>index.js</code> within routes<br />
+2. Refactor your server code <br />
+h3(file-heading). <em>server.py</em></p>
 <pre class="file">var express = require('express');
 var path = require('path');
 
