--- a/lab_07.html
+++ b/lab_07.html
@@ -90,11 +90,11 @@ app.listen(port, () =&gt; console.log(`Example app listening on port ${port}!`))
 	<li>Views &#8211; contain the functionality of Controllers and are responsible for both displaying <span class="caps">HTML</span> and binding user events to the <span class="caps">DOM</span></li>
 	<li>Controllers &#8211; Handles any incoming <span class="caps">URL</span> request (the functions related to your endpoints/routes)</li>
 </ul>
-<h2>Refactor folder structure<br />
-1. Create a folder called <code>routes</code>. In our case we will have our routes contain our controller code. <br />
+<h2>Refactor folder structure</h2>
+<p>1. Create a folder called <code>routes</code>. In our case we will have our routes contain our controller code. <br />
 2. Create a folder called <code>models</code><br />
 3. Create a folder called <code>public</code> this will be similar to our <code>static</code> folder in flask. This is where we will house any static files we want to display or use within our html (like javascripts, css, etc.)<br />
-4. Create a folder called <code>db</code> this will be where we store all our database files</h2>
+4. Create a folder called <code>db</code> this will be where we store all our database files</p>
 <h2>Refactor Server to show Routes</h2>
 <p>1. Create a file called <code>index.js</code> within routes<br />
 2. Refactor your server code <br />
