Updated docs to 016a63d

--- a/lab_07.html
+++ b/lab_07.html
@@ -80,8 +80,8 @@ app.listen(port, () =&gt; console.log(`Example app listening on port ${port}!`))
 <p>6. Now run it by typing <code>node server.js</code><br />
 7. Take a look at your home page and ensure that you can see <code>Hello World!</code> output at <code>localhost:3000</code><br />
 8. Now that we are not subscribing to the flask framework, our file structure will look different. Create a folder called <code>views</code>. <code>views</code> is where you will be storing all our html<br />
-9. Create a file called <code>index.html</code> within <code>views</code> and put any html code of your choosing<br />
-10. Now refactor your server code to render the html rather than just saying &#8216;Hello World&#8217;. See <a href="https://expressjs.com/en/4x/api.html#res.render">here</a><br />
+9. Create a file called <code>index.ejs</code> within <code>views</code> and put any html code of your choosing<br />
+10. Now refactor your server code to render the html rather than just saying &#8216;Hello World&#8217;. See <a href="https://expressjs.com/en/4x/api.html#res.render">here</a>. You may have to set up the view engine. See #7.<br />
 11. Confirm that it works!</p>
 <h2>Model View Controller</h2>
 <p>A common application architectural pattern is the Model-View-Controller (<span class="caps">MVC</span>) pattern.</p>
