Updated docs to 7aed576

--- a/lab_07.html
+++ b/lab_07.html
@@ -97,7 +97,8 @@ app.listen(port, () =&gt; console.log(`Example app listening on port ${port}!`))
 4. Create a folder called <code>db</code> this will be where we store all our database files</p>
 <h2>Refactor Server to show Routes</h2>
 <p>If it says something akin to &#8220;<node_module>&#8221; not found, just do an <code>npm install --save &lt;node_module&gt;</code></p>
-<p>1. Create a file called <code>index.js</code> within routes<br />
+<p>// clean this up<br />
+1. Create a file called <code>index.js</code> within routes<br />
 2. Refactor your server code <br />
 h3(file-heading). <em>server.py</em></p>
 <pre class="file">var express = require('express');
@@ -258,6 +259,7 @@ module.exports = router;
 <ul>
 	<li>Create a dummy entry in your users table in your chatapp database</li>
 	<li>Test your login functionality</li>
+	<li>Now create a route and model code that will fetch all users</li>
 </ul>
         <nav class="foot-navigation">
       <a href="lab_06.html">
