--- a/lab_07.html
+++ b/lab_07.html
@@ -259,7 +259,66 @@ module.exports = router;
 <ul>
 	<li>Create a dummy entry in your users table in your chatapp database</li>
 	<li>Test your login functionality</li>
-	<li>Now create a route and model code that will fetch all users</li>
+	<li>Create a new route for register. You will need to create a new function within your Users model called &#8220;create&#8221; that does an insertion.</li>
+	<li>Now create a new model called Message.js and put all your functions necessary to access and insert things into your database in the file</li>
+</ul>
+<h2>Sequelize</h2>
+<p><a href="http://docs.sequelizejs.com/">Sequelize</a> is an </p>
+<p>Database migrations (also known as schema migrations) refers to the management of incremental changes to the schemas of a database. For example, if you want to add a new column, or delete a column, or want to keep a history of your migrations just in case you want to &#8220;rollback&#8221; to it, then this is where database migrations come in handy. Take a look <a href="https://github.com/biancasubion/codeable/tree/master/db/migrations">here</a> for examples of migrations.</p>
+<p>Notice that instead of manually creating an init.sql file to create our tables, we will be using migrations instead. Here is an example of a database migration file</p>
+<h3 class="file-heading"><em>20161022071303-createUsers.js</em></h3>
+<pre class="file">'use strict';
+
+module.exports = {
+  up: function (queryInterface, Sequelize) {
+    queryInterface.createTable(
+      'users',
+      {
+        id: {
+          type: Sequelize.INTEGER,
+          primaryKey: true,
+          autoIncrement: true
+        },
+        createdAt: {
+          type: Sequelize.DATE
+        },
+        updatedAt: {
+          type: Sequelize.DATE
+        },
+        name: {
+          type: Sequelize.STRING
+        }
+        username: {
+          type: Sequelize.STRING
+        }
+        password: {
+          type: Sequelize.STRING
+        }
+      }
+    );
+  },
+  down: function (queryInterface, Sequelize) {
+    /*
+      Add reverting commands here.
+      Return a promise to correctly handle asynchronicity.
+      Example:
+      return queryInterface.dropTable('users');
+      */
+    return queryInterface.dropTable('users');
+  }
+};
+</pre>
+<p>Let&#8217;s break this down a little bit. A migration up will create the table and a migration down will delete it</p>
+<h2>Coding Exercise</h2>
+<ul>
+	<li>Rebuild your app in a new repo and call it chat-app-with-sequelize</li>
+	<li><code>npm install --save sequelize-cli</code></li>
+	<li><code>node_modules/.bin/sequelize init</code> to create an empty project</li>
+	<li>Read the documentation in <a href="http://docs.sequelizejs.com/manual/tutorial/migrations.html"> To set up your configuration </a></li>
+	<li>Create your first migration:  node_modules/.bin/sequelize model:generate &#8212;name User &#8212;attributes username:string,password:string@. This will create a user file in models and a migration file with name like <code>XXXXXXXXXXXXXX-create-user.js</code> in the migrations folder</li>
+	<li>To run the migration script do <code>node_modules/.bin/sequelize db:migrate</code>. This will migrate all tables yet to migrate (run all the migration files). This will create a table called Users in your database specificed in your config.</li>
+	<li>Ensure you can find the table in mysql.</li>
+	<li>Undo the most recent migration by doing <code>node_modules/.bin/sequelize db:migrate:undo</code>. (To undo all migrations do <code>node_modules/.bin/sequelize db:migrate:undo:all</code>).</li>
 </ul>
         <nav class="foot-navigation">
       <a href="lab_06.html">
