Updated docs to 2143bb3

--- a/lab_05.html
+++ b/lab_05.html
@@ -119,7 +119,7 @@ together your conditions using <code>AND</code> and <code>OR</code></p>
 <p><code>SELECT name from CLASSES WHERE name LIKE 'c%';</code></p>
 <h2>Coding Exercises</h2>
 <ul>
-	<li>Display the id and name of all the students whose names end in &#8216;m&#8217;</li>
+	<li>Display the id and name of all the students whose names endGG in &#8216;m&#8217;</li>
 	<li>Display all columns for students whose names do not contain the letter &#8216;a&#8217;. <span class="caps">HINT</span>: a more long-winded way to say &#8220;includes the letter &#8216;a&#8217;&#8221; is includes 0 or more of any letter followed by an &#8216;a&#8217; followed by 0 or more of any letter</li>
 </ul>
 <h2>Limiting <code>WHERE</code> to a defined set with <code>IN</code></h2>
