Updated docs to c110ebc

--- a/lab_08.html
+++ b/lab_08.html
@@ -213,11 +213,11 @@ this.setState({
 <h2>Coding Exercise</h2>
 <ul>
 	<li>Create a separate component for a picture and render a hardcoded image. Create a new react route for it on <code>app/index.js</code>!<br />
-p.  Pass the picture fetched from your server in the Feed component to a new photo component instead of using the hardcoded image source you took.</li>
+p.  Pass the picture fetched from your server in the Feed component to a new photo component instead of using the hardcoded image source you took</li>
 </ul>
-<h2>Coding Exercise</h2>
+<h2>Coding Exercise (Challenge)</h2>
 <ul>
-	<li>Create a new login component</li>
+	<li>Create a new login component. Read the signup component carefully as a lot of the code will be similar to how you will create the login component</li>
 </ul>
         <nav class="foot-navigation">
       <a href="lab_07.html">
